# PolyFHE

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cc-hifive  compile_commands.json  config.csv  main.py  phantom.txt  pyproject.toml
artifact_evaluation/: README.md  plot-cachehit.py  plot-e2e-exectime.py  plot-exectime-axdnum.py  plot-motivative-ex-stallreason.py  plot-smem-conflict.py  plot-stallreason.py  profile-cachehit.sh  profile-exectime.sh  profile-stallreason.sh
artifact_evaluation/data/: cachehit-opt.csv  e2e_elasm_LR.txt  e2e_elasm_MLP.txt  e2e_elasm_SobelFilter.txt  evalstall-exectime-noopt-set2.csv  evalstall-exectime-opt.csv  evalstall-exectime-phantom-set1.csv  evalstall-exectime-phantom.csv  evalstall-stallreason-noopt-set1.csv  evalstall-stallreason-noopt.csv  evalstall-stallreason-opt.csv  evalstall-stallreason-phantom-set2.csv  memtransfer-noopt-set1.csv  memtransfer-noopt.csv  memtransfer-opt-set1.csv  memtransfer-opt-set2.csv  memtransfer-opt.csv  seal_all.txt  smem-conflict-noopt-set2.csv  smem-conflict-opt-set1.csv  smem-conflict-opt-set2.csv  smem-conflict-phantom-set1.csv  smem-conflict-phantom-set2.csv  smem_rump.csv  stallreason-noopt.csv
artifact_evaluation/figure/: BConv.eps  exectime-logN16_L36_K1_Q1480_brisket.eps  exectime-logN16_L36_K6_Q1580_brisket.eps  memtransfer-set1.eps  memtransfer-set2.eps  motivative-ex-stallreason-Mult.eps  motivative-ex-stallreason.eps  smem-conflict-set1.eps  smem-conflict-set2.eps  smem_limit_gpus.eps  smem_limit_gpus_rump.eps  stallreason-set1.eps
benchmark/ckks_CMult/: Makefile  benchmark.cu  graph_poly.dot
benchmark/ckks_HAdd/: benchmark.cu  config.csv
config/: config-100KB.csv  config-10KB.csv  config-110KB.csv  config-120KB.csv  config-130KB.csv  config-140KB.csv  config-150KB.csv  config-160KB.csv  config-170KB.csv  config-180KB.csv  config-20KB.csv  config-30KB.csv  config-40KB.csv  config-50KB.csv  config-60KB.csv  config-70KB.csv  config-80KB.csv  config-90KB.csv  config-logN15_L12_dnum2_SMemKB20.csv  config-logN15_L12_dnum2_SMemKB40.csv  config-logN15_L12_dnum2_SMemKB60.csv  config-logN15_L12_dnum2_SMemKB80.csv  config-logN15_L12_dnum3_SMemKB20.csv  config-logN15_L12_dnum3_SMemKB40.csv  config-logN15_L12_dnum3_SMemKB60.csv  config-logN15_L12_dnum3_SMemKB80.csv  config-logN15_L12_dnum6_SMemKB20.csv  config-logN15_L12_dnum6_SMemKB40.csv  config-logN15_L12_dnum6_SMemKB60.csv  config-logN15_L12_dnum6_SMemKB80.csv  config-logN15_L18_dnum18_SMemKB20.csv  config-logN15_L18_dnum18_SMemKB40.csv  config-logN15_L18_dnum18_SMemKB60.csv  config-logN15_L18_dnum18_SMemKB80.csv  config-logN15_L18_dnum2_SMemKB20.csv  config-logN15_L18_dnum2_SMemKB40.csv  config-logN15_L18_dnum2_SMemKB60.csv  config-logN15_L18_dnum2_SMemKB80.csv  config-logN15_L18_dnum3_SMemKB20.csv  config-logN15_L18_dnum3_SMemKB40.csv  (+155 more)
data/: dram_latency.csv  graph_fhe.dot  graph_output.dot  graph_poly.dot  graph_poly4.dot  graph_poly_fused.dot  graph_poly_fused_alpha.dot  graph_poly_fused_beta.dot  graph_poly_fused_elemwise.dot  graph_poly_hadd.dot  graph_poly_hmult.dot  graph_poly_hmult_branch.dot  output.dot  output.dot.dot  plot_dram_latency.py
example/: CMakeLists.txt  ckks.hpp  example.cpp
example/archive/: CMakeLists.txt  ckks.cpp  example_phantom.cu
example/ckks_CMult/: Makefile  build.sh  example.cu  example.py  output.dot
example/ckks_HAdd/: build.sh  example.cu  example.py  graph_poly.dot  output.dot
example/ckks_HMult/: Makefile  build.sh  example.cu  example.py  exec.sh  generated-fast.cu  generated-slow.cu  graph_poly.dot  output.dot  parse_csv.py  profile-cachehit.sh  profile-ncu.sh
example/ckks_HMult_wo_relealize/: build.sh  example.cu  example.py  output.dot
example/tiny/: Makefile  cachehit-noopt.csv  cachehit-opt.csv  cachehit.csv  cachehit.eps  example.cu  plot-cachehit.py  profile-cachehit.sh
hifive/: utils.cpp  utils.hpp
hifive/core/: config.cpp  config.hpp  logger.h  logger.hpp  param.hpp
hifive/estimator/: dram.cu
hifive/frontend/: exporter.cpp  exporter.hpp  parser.cpp  parser.hpp
hifive/kernel/: Context.cpp  EvaluatorUtils.cpp  Makefile  Scheme.cpp  StringUtils.cpp  TestScheme.cpp  TimeUtils.cpp  device_context.cu  device_context.hpp  main.cpp  ntt.cu  ntt.hpp  polynomial.cpp  polynomial.cu  polynomial.h  polynomial.hpp  polynomial_test.cu
hifive/tools/: hifive.cpp
kernel/: .gitignore  Makefile  TestScheme  polynomial_test.cu
lib/Dialect/: CMakeLists.txt
lib/fusion/: Makefile  fhe.cc  fusion  graph.dot  graph.h  graph_fhe.dot  graph_poly.dot  main.cc  poly.cc
lib/kernel/: README.md
mlir/: .gitignore  CMakeLists.txt  README.md
mlir/tests/: CMakeLists.txt  affine_loop_unroll.mlir  lit.cmake.cfg.py
mlir/tools/: hifive-opt.cpp
polyfhe/: CMakeLists.txt  utils.cpp  utils.hpp
polyfhe-py/: example.py  polyfhe.py
polyfhe/core/: CMakeLists.txt  config.cpp  config.hpp  logger.hpp
polyfhe/engine/: CMakeLists.txt
polyfhe/estimator/: dram.cu
profile/: README.md  plot-cachehit.py  plot-e2e-exectime.py  plot-exectime-axL.py  plot-exectime-axdnum.py  plot-memaccess.py  plot-memtransfer.py  plot-motivative-ex-stallreason.py  plot-motivative-ex-time.py  plot-smem-conflict.py  plot-smemlimit-gpus.py  plot-smemlimit.py  plot-stallreason.py  profile-cachehit.sh  profile-exectime.sh  profile-memaccess.sh  profile-memtransfer.sh  profile-motivative-ex.sh  profile-smem-conflict.sh  profile-smemlimit.sh  profile-stallreason.sh
pypolyfhe/: __init__.py  params.py  polyfhe.py
script/: build-example.sh  build-heaan.sh
scripts/: build-mlir.sh  build.sh
src/: CMakeLists.txt  ciphertext.cu  ciphertext.h  evaluate.cu  evaluate.h  fhe-op.cc  fhe.cc  gpu_utils.cu  gpu_utils.h  gpucontext.cu  gpucontext.h  graph.h  graph.py  main.cc  ntt.cu  ntt.h  poly-op.cc  poly.cc  polynomial.cu  polynomial.h
test/: CMakeLists.txt  ciphertext.cu  ckks.cu  cuckks-phantom.cu  cuckks.cu  gpu_utils.cu  gpucontext.cu  main.cu  ntt.cu  phantom.cu  polynomial.cu  seal.cu  test.h  test.hpp  test_ntt.cu  test_poly.cu  util.cu
tests/: lit.cfg.py  poly.mlir
tools/: CMakeLists.txt  hifive-opt.cpp
(+733 files in other folders)
