[project]
name = "pypolyfhe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pypolyfhe"]

[tool.uv.sources]
pypolyfhe = { workspace = true }

[dependency-groups]
dev = [
    "pypolyfhe",
]
